--- a/NCalc.Calculator/NCalc.Calculator.csproj
+++ b/NCalc.Calculator/NCalc.Calculator.csproj
@@ -1,12 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CoreCLR-NCalc" Version="2.2.92" />
+      <Compile Remove="Class1.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Antlr3.Runtime" Version="3.5.1" />
     </ItemGroup>
 
 </Project>
